Fixed column overflow and drop action

--- a/src/components/DroppableArea.css
+++ b/src/components/DroppableArea.css
@@ -13,7 +13,7 @@
 
 .horizontal {
     height: 400px;
-    width: 100%;
+    min-width: 300px;
     margin: 0 2em;
     padding: 2em;
 }
